tests/ui/get_ard.stderr
error[E0505]: cannot move out of `stmt` because it is borrowed
  --> $DIR/get_ard.rs:50:36
   |
47 |     SQLGetStmtAttrA(&stmt, SQL_ATTR_APP_ROW_DESC, Some(&mut desc), None);
   |                     ----- borrow of `stmt` occurs here
...
50 |     SQLFreeHandle(SQL_HANDLE_STMT, stmt);
   |                                    ^^^^ move out of `stmt` occurs here
51 |     drop(desc);
   |          ---- borrow later used here
